fix: mobile joblist slide text spillage

--- a/src/stylesheets/contact.scss
+++ b/src/stylesheets/contact.scss
@@ -5,20 +5,25 @@
   align-items: center;
   max-height: 100vh;
 
-  header, footer {
+  header,
+  footer {
     width: 95%;
   }
 
   header {
     .home-btn {
-        cursor: pointer;
-        opacity: 0.2;
-        transition: all 0.3s ease-out;
+      cursor: pointer;
+      opacity: 0.2;
+      transition: all 0.3s ease-out;
 
-        &:hover {
-          transition: all 0.3s ease-in;
-          opacity: 1;
-        }
+      &:hover {
+        transition: all 0.3s ease-in;
+        opacity: 1;
+      }
+
+      @media screen and (max-width: 992px) {
+        font-size: 2rem;
+      }
     }
   }
 
@@ -106,7 +111,7 @@
       display: flex;
       justify-content: center;
       text-align: center;
-      
+
       @media (max-width: 800px) {
         width: 100%;
       }
